# DL_model-for-dep-deat

./: .gitattributes  .gitignore  extract_deep_features.py  infer_ui_pyside6.py  infer_ui_streamlit.py  infer_utils.py  model_pretrain.py  plot_class_distribution.py  refactor_data.py  run_infer_ui_pyside6.bat  train_ml_features.py
docs/: README.md  (+6 more)
durian-leaf-disease-detection/: .gitignore  README.md  main.py  pyproject.toml
durian-leaf-disease-detection/config/: default.yaml
durian-leaf-disease-detection/scripts/: run_pipeline.py
durian-leaf-disease-detection/src/durian_detect/: __init__.py  cli.py  config.py
durian-leaf-disease-detection/src/durian_detect/data/: balance.py  pull.py  refactor.py
durian-leaf-disease-detection/src/durian_detect/training/: train.py
durian-leaf-disease-detection/src/durian_detect/visualization/: distribution.py
v2/: README.md  config.py  pyproject.toml
v2/01_data/: NOTES.md  refactor_data.py
v2/01_data_acquisition/: downsample_large_classes.py  pull_data.py
v2/02_eda/: NOTES.md  plot_class_distribution.py
v2/02_feature_extraction/: extract_deep_features.py  filter_top_classes.py
v2/03_train_detector/: CHEATSHEET.md  NOTES.md  train_yolo.py
v2/04_features/: CHEATSHEET.md  NOTES.md  PRESENTATION.md  filter_top_classes.py
v2/04_inference_cli/: infer_cli.py  infer_utils.py
v2/05_train_classifier/: CHEATSHEET.md  NOTES.md  PRESENTATION.md  compare_models.py  train_ml_features.py
v2/06_inference/: cli.py  core.py  ui_pyside.py  ui_streamlit.py
v2/data/durian-1/: data.yaml
v2/data/durian_refactor/: data.yaml
(+8 files in other folders)
